--- a/apps/front/index.ejs
+++ b/apps/front/index.ejs
@@ -15,7 +15,7 @@
       @import url(https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,600,700,800&display=swap);
     </style>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" />
     <% for (var chunk in htmlWebpackPlugin.files.css) { %>
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[chunk] %>" />
     <% } %>
