--- a/apps/front/index.ejs
+++ b/apps/front/index.ejs
@@ -11,8 +11,11 @@
       content="Naucz się programować od zera. Kompletne kursy progrmowania z wielogodzinną praktyką."
     />
     <meta name="google" content="notranslate" />
+    <style>
+      @import url(https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,600,700,800&display=swap);
+    </style>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" />
     <% for (var chunk in htmlWebpackPlugin.files.css) { %>
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[chunk] %>" />
     <% } %>
