--- a/apps/front-next/src/components/ButtonNext.module.css
+++ b/apps/front-next/src/components/ButtonNext.module.css
@@ -14,6 +14,13 @@
   active:bg-secondary-700 active:border-secondary-800;
 }
 
+.type-neutral {
+  @apply border bg-white text-gray-900 border-white
+  hover:bg-gray-200 hover:border-gray-200
+  active:bg-gray-300 active:border-gray-300
+  focus:ring-alpha-white20;
+}
+
 .size-large,
 .size-default {
   @apply py-3 px-7 rounded-md;
@@ -21,4 +28,8 @@
 
 .size-small {
   @apply text-sm py-2 px-5 rounded-md;
+}
+
+.size-extra-small {
+  @apply text-sm py-1 px-3 rounded-md;
 }
