--- a/apps/front-next/src/styles/global.css
+++ b/apps/front-next/src/styles/global.css
@@ -28,6 +28,14 @@
       rgba(31, 45, 61, 0) 75%
     );
   }
+
+  .caret {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid currentColor;
+  }
 }
 
 svg {
