--- a/apps/front-next/src/components/ButtonNext.module.css
+++ b/apps/front-next/src/components/ButtonNext.module.css
@@ -16,7 +16,7 @@
 }
 
 .type-neutral {
-  @apply border bg-white text-gray-900 border-white
+  @apply border-2 bg-white text-gray-900 border-gray-300
   hover:bg-gray-200 hover:border-gray-200
   active:bg-gray-300 active:border-gray-300
   focus:ring-alpha-white20;
