--- a/apps/front-next/src/styles/global.css
+++ b/apps/front-next/src/styles/global.css
@@ -38,7 +38,28 @@
   }
 }
 
+html {
+  height: 100% !important;
+}
+
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 svg {
   max-width: 100%;
   height: auto;
+}
+
+#__next {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+}
+
+#portals {
+  z-index: 3;
 }
