--- a/apps/front/src/styles/global.css
+++ b/apps/front/src/styles/global.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  a {
+    @apply text-primary hover:underline;
+  }
+}
+
 @layer utilities {
   .sep {
     position: relative;
